# repairs-tracker

./: .gitignore  app.js  backend-spec.md  index.html  prototype.html  readme.md  styles.css
backend/: computed.py  config.py  database.py  deps.py  enums.py  inference.py  main.py  models.py  permissions.py  pyproject.toml  schemas.py  seed.py
backend/routes/: admin.py  attachments.py  auth.py  config.py  dashboard.py  instruments.py  log_entries.py
data/: api.js  auth.js  permissions.js  seed.js
domain/: computed.js  constants.js  inference.js  models.js
frontend/: app.js  index.html  styles.css
frontend/data/: api.js  auth.js  client.js
frontend/domain/: config.js  constants.js  inference.js
frontend/state/: store.js
frontend/ui/: dashboard.js  detail.js  form-controller.js  form.js  log.js  login.js  sidebar.js
state/: store.js
ui/: dashboard.js  detail.js  form-controller.js  form.js  log.js  login.js  modal.js  shared.js  sidebar.js
